# libpgfmt

./: CLAUDE.md  Cargo.toml  Justfile  README.md  compose.yaml
.github/workflows/: release.yaml  testing.yaml
examples/: dump_plpgsql.rs  dump_tree.rs  format_plpgsql_test.rs  format_test.rs
src/: error.rs  lib.rs  node_helpers.rs  style.rs
src/formatter/: expr.rs  mod.rs  pgdump.rs  plpgsql.rs  select.rs  stmt.rs
tests/: all_fixtures.rs  fixtures_test.rs  pgdump_idempotency_test.rs  plpgsql_test.rs  smoke_test.rs  test_parens.rs
tests/fixtures/aweber/: from_comma_join_mix.expected
tests/fixtures/dbt/: select_cte_multi.expected
tests/fixtures/mattmc3/: select_simple.expected  select_simple.sql  update_multi.expected  update_multi.sql
tests/fixtures/mozilla/: create_foreign_table_inline_comments.expected  create_foreign_table_inline_comments.sql  create_table_comment_boundaries.expected  select_using_join.expected
tests/fixtures/pg_dump/: func_add.sql  func_behavior.sql  func_bump.sql  func_default.sql  func_out.sql  func_return.sql  func_set.sql  func_setof.sql  func_table.sql  func_variadic.sql  generate.sh  propgraph_min.sql  propgraph_shop.sql  schema.sql  view_case_first.sql  view_case_plain.sql  view_derived.sql  view_derived_join.sql  view_distinct_case.sql  view_distinct_on.sql  view_filter_agg.sql  view_lateral.sql  view_lim.sql  view_nested_sub.sql  view_nulls_win.sql  view_order_totals.sql  view_recent_cte.sql  view_sub.sql  view_sub_exists.sql  view_sub_scalar.sql  view_two_cte.sql  view_uni.sql  view_union_order.sql  view_us_users.sql  (+3 more)
(+55 files in other folders)
